syntax = "proto3";

package mawjood.v1;

option go_package = "mawjood/gen/go/packages/proto/v1";

import "messages.proto";

service DiscoveryService {
  rpc SearchContents(SearchContentsRequest) returns (SearchContentsResponse);
  
  rpc ListContents(ListContentsRequest) returns (ListContentsResponse);
  
  rpc GetContent(GetContentRequest) returns (Content);
} 